<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="output_error_datagrid" Id="{bc5ca8be-dcfa-4bad-841e-aba67bb969a8}">
    <Declaration><![CDATA[TYPE output_error_datagrid :
STRUCT
	errorStatus : BOOL;
	errorID : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>