<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Axis" Id="{67c536b7-cb91-42b9-a9d5-7bc5afe11e21}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Axis

VAR_INPUT

    //========================================================AXIS SHAPE========================================================
    coilShapeID           : INT := 0;                 // defines shape of coil attached to axis.
    pancake               : pancake_params_0;         // ID 0
    racetrack             : racetrack_params_1;       // ID 1

    //========================================================AXIS DIMENSIONS========================================================
    outerRadiusCurrent    : LREAL;                    // outer radius of coil

    //========================================================AXIS TAPE========================================================
    tape_info             : ARRAY[0..10] OF tape_info;// array of tape information
    tapeType              : INT;                      // type of tape

    //========================================================MASS========================================================
    emptyMassKG           : LREAL := 20;              // mass of the empty axis in KG
    momentInertia         : LREAL := 0;               // moment of inertia

    //========================================================AXIS CONTROL BOOL========================================================
    // sets which FB's should be executed cyclically
    powerEnable           : BOOL;                     // power enable
    resetEnable           : BOOL;                     // reset enable
    velocityEnable        : BOOL;                     // velocity enable
    haltEnable            : BOOL;                     // halt enable
    homeEnable            : BOOL;                     // home enable
    stopEnable            : BOOL;                     // stop enable
    torqueEnable          : BOOL;                     // torque enable
    posEnable             : BOOL;                     // position enable
    modmoveEnable         : BOOL;                     // move modulo enable
    test                  : BOOL;                     // test enable
    enabled               : BOOL;                     // sets whether axis is enabled
	
    //========================================================AXIS CONTROL MISC OPTIONS========================================================
    // misc options for axis
    directionB            : INT := 0;                 // direction
    direction             : MC_Direction := MC_Positive_Direction; // direction of motion
    buffermode            : MC_BufferMode := MC_Aborting;           // buffer mode
    moveOptions           : ST_MoveOptions;           // move options
    homeOptions           : ST_HomingOptions;         // homing options

    ST_SetPositionOptions : ST_SetPositionOptions;    // set position options

    //========================================================AXIS CONTROL VALUES========================================================
    // TORQUE CONTROL
    torque                : LREAL;                    // torque value
    velocityLimitHigh     : LREAL;                    // high velocity limit
    velocityLimitLow      : LREAL;                    // low velocity limit

    // SECONDARY TORQUE CONTROL SETTINGS
    acceleration          : LREAL := 1;               // acceleration value
    deceleration          : LREAL := 1;               // deceleration value
    torqueRamp            : LREAL := 1000;            // torque ramp value

    jerk                  : LREAL := 1;               // jerk value

    // VELOCITY CONTROL
    velocity              : LREAL;                    // velocity value

    //========================================================AXIS STATUS VARS========================================================
    actualTorque          : LREAL;                    // actual torque value
    actualVelocity        : LREAL;                    // actual velocity value

    state                 : INT;                      // state value

    adsError              : BOOL;                     // ADS error flag
    adsErrorID            : UDINT;                    // ADS error ID

    //========================================================AXIS PARAMS========================================================
    ratedCurrent          : LREAL;                    // rated current
    torqaueConstrant      : LREAL;                    // torque constant
    gearRatioNum          : INT;                      // gear ratio numerator
    gearRatioDen          : INT;                      // gear ratio denominator

    //========================================================AXIS CONTROL FB========================================================
    // instantiates FB's for various axis control functions
    MCPOWER               : MC_Power;                 // power control
    MCRESET               : MC_Reset;                 // reset control
    MCHOME                : MC_Home;                  // home control
    MCVELOCITY            : MC_MoveVelocity;          // move velocity control
    MCHALT                : MC_Halt;                  // halt control
    MCSTOP                : MC_Stop;                  // stop control
    MCGETVELOCITY         : MC_ReadActualVelocity;    // read actual velocity
    MCTORQUECONTROL       : MC_TorqueControl;         // torque control
    MCPOS                 : MC_SetPosition;           // set position
    MCJOG                 : MC_Jog;                   // jog control
    MCMOVEMOD             : MC_MoveModulo;            // move modulo control

    //========================================================AXIS========================================================
    AXIS                  : Axis_REF;                 // axis reference

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ ]]></ST>
    </Implementation>
    <Folder Name="Methods" Id="{a176b26e-e67a-42bd-94f4-2f0b6113d4b7}">
      <Folder Name="Error Checks" Id="{5e84902a-c5c6-4038-a6b5-6ad92834b0c4}" />
      <Folder Name="Misc" Id="{154da71a-12a3-4387-8f76-6b557dc01298}" />
      <Folder Name="sets" Id="{31fae47e-262c-4f32-a922-a3f514e3e406}" />
    </Folder>
    <Method Name="CYLIC" Id="{7c186ae0-44c4-4808-9e23-1f18de41fa53}">
      <Declaration><![CDATA[METHOD CYLIC : BOOL
VAR_INPUT
END_VAR

VAR
	homePosition: LREAL;
	velocity: LREAL;
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[powerEnable:=enabled; 

MCPOWER(Axis:=Axis,
		Enable:=powerEnable,
		Enable_Positive:=powerEnable,
		Enable_Negative:=powerEnable);
		
MCSTOP(Axis:=Axis,
		Execute:=stopEnable,
		Deceleration:=deceleration,
		Jerk:=jerk,Options:=moveOptions);
		
MCHALT(Axis:=Axis,
		Execute:=haltEnable,
		Deceleration:=deceleration,
		Jerk:=jerk,BufferMode:=buffermode,
		Options:=moveOptions);		
MCMOVEMOD(Axis:=Axis,
			Execute:=velocityEnable,
			Acceleration:=acceleration,
			Deceleration:=deceleration,
			Jerk:=jerk,
			Direction:=direction,
			Velocity:=velocity);
MCTORQUECONTROL(Axis:=Axis,
				Execute:=torqueEnable,
				ContinuousUpdate:=TRUE,
				Relative:=FALSE,
				Torque:=torque,
				TorqueRamp:=torqueRamp,
				VelocityLimitHigh:=velocityLimitHigh,
				VelocityLimitLow:=velocityLimitLow);
				
MCVELOCITY(Axis:=Axis,
			Execute:=velocityEnable,
			Acceleration:=acceleration,
			Deceleration:=deceleration,
			Jerk:=jerk,
			Direction:=direction,
			Velocity:=velocity);		
(* 
MCTORQUECONTROL(Axis:=Axis,
				Execute:=torqueEnable,
				ContinuousUpdate:=TRUE,
				Relative:=FALSE,
				Torque:=torque*(gearRatioDen/gearRatioNum),
				TorqueRamp:=torqueRamp,
				VelocityLimitHigh:=velocityLimitHigh*(gearRatioNum/gearRatioDen),
				VelocityLimitLow:=velocityLimitLow*(gearRatioNum/gearRatioDen));
				
MCVELOCITY(Axis:=Axis,
			Execute:=velocityEnable,
			Acceleration:=acceleration,
			Deceleration:=deceleration,
			Jerk:=jerk,
			Direction:=direction,
			Velocity:=velocity*(gearRatioNum/gearRatioDen));
			
*)

MCGETVELOCITY(Axis:=AXIS,
			Enable:=TRUE,
			ActualVelocity=>actualVelocity);
	 
getTorque();
stateUpdate();
findinertia();]]></ST>
      </Implementation>
    </Method>
    <Method Name="error_check_all" Id="{d0c59f3f-f6b6-4fd0-853c-e3534ca6d5d0}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD error_check_all : BOOL
VAR_OUTPUT
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[

power_error_check(Error=>adsError,errorID=>adsErrorID);



torque_error_check(Error=>adsError,errorID=>adsErrorID);



velocity_error_check(Error=>adsError,errorID=>adsErrorID);



stop_error_check(Error=>adsError,errorID=>adsErrorID);

setpos_error_check(Error=>adsError,errorID=>adsErrorID);
	

]]></ST>
      </Implementation>
    </Method>
    <Method Name="findinertia" Id="{1c478d19-00ea-4701-b3cf-13a0a384da78}" FolderPath="Methods\Misc\">
      <Declaration><![CDATA[METHOD findinertia : BOOL
VAR_INPUT
END_VAR

VAR
	cableMassKG: LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//to do , find mass from cable.

momentInertia:=(0.5)*(emptyMassKG+cableMassKG)*EXPT(getDistToAxis(),2);

]]></ST>
      </Implementation>
    </Method>
    <Method Name="getDistToAxis" Id="{6b2436af-4b54-4ed0-a9cd-4034ab7bf577}" FolderPath="Methods\Misc\">
      <Declaration><![CDATA[METHOD getDistToAxis : LREAL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Finds distance to axis from internal dimension and turn count vars. 

//output units in mm. IMPORTANT

CASE coilShapeID OF
	0:
	
	CASE directionB OF
		
	0: //Finds direction if motor is being unwound
	
	getDistToAxis:=(pancake.radius + axis.NcToPlc.ModuloActTurns*tape_info[tapeType].tape_depth)/1000; 
	
	1: //Finds direction if motor is being wound
	
	getDistToAxis:=(pancake.radius + axis.NcToPlc.ModuloActTurns*tape_info[tapeType].tape_depth)/1000;
	
	
	END_CASE
	
	
	
	
	
	1://TO DO. IMPLEMENT OTHER COIL IDS BESDIES PANCAKE
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="getTorque" Id="{6c5c5c23-bebe-4cf8-bf3b-ff120224285b}" FolderPath="Methods\Misc\">
      <Declaration><![CDATA[METHOD getTorque : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[actualTorque:=(AXIS.NcToPlc.ActTorque/100)*ratedCurrent*torqaueConstrant;]]></ST>
      </Implementation>
    </Method>
    <Method Name="halt_error_check" Id="{2ca5f59d-5312-4450-b836-ed2e20c6ea56}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD halt_error_check : BOOL
VAR_INPUT
END_VAR

VAR_OUTPUT
	Error: BOOL;
	errorID: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MCHALT(Axis:=Axis,Error=>Error,ErrorID=>errorID);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="INIT" Id="{cb6cd0a9-c647-4489-a174-b70a666913ba}">
      <Declaration><![CDATA[METHOD INIT : BOOL
VAR_INPUT
END_VAR

VAR
	i: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[powerEnable:=TRUE;

ST_SetPositionOptions.ClearPositionLag:=TRUE;
MCRESET(Axis:=AXIS,Execute:=TRUE);

//this is ugly :( it gets the job done though
tape_info[0].tape_width:=GVL.TAPE1_WIDTH;
tape_info[0].tape_depth:=GVL.TAPE1_DEPTH;
tape_info[0].mass_per_cm_g:=GVL.TAPE1_MASS_PER_CM_G;

tape_info[1].tape_width:=GVL.TAPE2_WIDTH;
tape_info[1].tape_depth:=GVL.TAPE2_DEPTH;
tape_info[1].mass_per_cm_g:=GVL.TAPE2_MASS_PER_CM_G;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="power_error_check" Id="{3a006f0e-5221-4ae0-9860-3fc9c0782ddb}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD power_error_check : BOOL
VAR_OUTPUT
	error :BOOL;
	errorID : UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MCPOWER(Axis:=Axis,Error=>Error,ErrorID=>errorID);]]></ST>
      </Implementation>
    </Method>
    <Method Name="setClear" Id="{3edee9ef-4ef0-4a7f-940a-a8847f5820a3}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setClear : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[velocityEnable:=FALSE;
stopEnable:=FALSE;
haltEnable:=FALSE;
homeEnable:= FALSE;
torqueEnable:= FALSE;
posEnable:=FALSE;
modmoveEnable:=FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="setHalt" Id="{2d8b8748-a52f-4cd2-900f-26056fd38ca1}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setHalt : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[velocityEnable:=FALSE;
stopEnable:=FALSE;
haltEnable:=TRUE;
homeEnable:= FALSE;
torqueEnable:= FALSE;
posEnable:=FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setHome" Id="{4b055be3-c329-44b4-84a9-fb655fd8c656}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setHome : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[velocityEnable:=FALSE;
stopEnable:=FALSE;
haltEnable:=FALSE;
homeEnable:= TRUE;
torqueEnable:= FALSE;
posEnable:=FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setPos" Id="{c270b1b3-4e96-4a7e-92d9-23393108ef68}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setPos : BOOL
VAR_INPUT
	
END_VAR

VAR
	
	Done: BOOL;
	i: INT;
	busy: BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="setpos_error_check" Id="{c1d7af26-a40a-4448-a273-3c6a04d53912}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD setpos_error_check : BOOL
VAR_INPUT
END_VAR


VAR_OUTPUT
	Error: BOOL;
	errorID: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MCPOS(Axis:=Axis,Error=>Error,ErrorID=>errorID);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="setReset" Id="{704b19ac-a526-4b1d-961a-2b6ba452c168}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setReset : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="setStop" Id="{612bcacf-3053-4295-8be1-bb716811093b}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setStop : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[velocityEnable:=FALSE;
stopEnable:=TRUE;
haltEnable:=FALSE;
homeEnable:= FALSE;
torqueEnable:= FALSE;
posEnable:=FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setTorque" Id="{37fa63df-8844-4715-be14-1d1e190c6f35}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setTorque : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[velocityEnable:=FALSE;
stopEnable:=FALSE;
haltEnable:=FALSE;
homeEnable:= FALSE;
torqueEnable:= TRUE;
posEnable:=FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="setVelocity" Id="{2e422cbc-a452-44f9-b242-0ddad3731936}" FolderPath="Methods\sets\">
      <Declaration><![CDATA[METHOD setVelocity : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[velocityEnable:=TRUE;
stopEnable:=FALSE;
haltEnable:=FALSE;
homeEnable:= FALSE;
torqueEnable:= FALSE;
posEnable:=FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="stateUpdate" Id="{47b61579-401b-4a3b-b130-c999b128bc7b}" FolderPath="Methods\Misc\">
      <Declaration><![CDATA[METHOD stateUpdate : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF powerEnable OR haltEnable OR stopEnable THEN
	state:=1;
END_IF
IF NOT enabled THEN
	state:=2;
END_IF
IF torqueEnable OR velocityEnable OR posEnable THEN
	state:=3;
END_IF
IF AXIS.Status.Error THEN
	state:=4;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="stop_error_check" Id="{ef513f0a-80f4-4bef-9122-655fb37b4b98}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD stop_error_check : BOOL
VAR_INPUT
END_VAR

VAR_OUTPUT
	errorID: UDINT;
	Error: BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MCSTOP(Axis:=Axis,Error=>Error,ErrorID=>errorID);

]]></ST>
      </Implementation>
    </Method>
    <Method Name="torque_error_check" Id="{f0391d66-cdcc-462c-8289-6666080e8d59}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD torque_error_check : BOOL
VAR_INPUT
END_VAR

VAR_OUTPUT
	Error: BOOL;
	errorID: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MCTORQUECONTROL(Axis:=Axis,Error=>Error,ErrorID=>errorID);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="velocity_error_check" Id="{828667ad-f097-444c-a024-b05a7b520e5b}" FolderPath="Methods\Error Checks\">
      <Declaration><![CDATA[METHOD velocity_error_check : BOOL
VAR_INPUT
END_VAR

VAR_OUTPUT
	Error: BOOL;
	errorID: UDINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MCVELOCITY(Axis:=Axis,Error=>Error,ErrorID=>errorID);
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Axis">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.CYLIC">
      <LineId Id="77" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="4" />
      <LineId Id="22" Count="2" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="3" />
      <LineId Id="95" Count="0" />
      <LineId Id="190" Count="5" />
      <LineId Id="164" Count="0" />
      <LineId Id="167" Count="14" />
      <LineId Id="25" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="26" Count="2" />
      <LineId Id="47" Count="1" />
      <LineId Id="29" Count="2" />
      <LineId Id="33" Count="6" />
      <LineId Id="154" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="89" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="155" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.error_check_all">
      <LineId Id="42" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="5" Count="2" />
      <LineId Id="18" Count="3" />
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="2" />
      <LineId Id="14" Count="2" />
    </LineIds>
    <LineIds Name="FB_Axis.findinertia">
      <LineId Id="17" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.getDistToAxis">
      <LineId Id="5" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="7" Count="2" />
      <LineId Id="13" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="25" Count="4" />
      <LineId Id="22" Count="2" />
      <LineId Id="20" Count="0" />
      <LineId Id="14" Count="3" />
      <LineId Id="11" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.getTorque">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.halt_error_check">
      <LineId Id="5" Count="1" />
    </LineIds>
    <LineIds Name="FB_Axis.INIT">
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="29" Count="2" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.power_error_check">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setClear">
      <LineId Id="6" Count="3" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="24" Count="1" />
    </LineIds>
    <LineIds Name="FB_Axis.setHalt">
      <LineId Id="6" Count="3" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setHome">
      <LineId Id="6" Count="3" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setPos">
      <LineId Id="47" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setpos_error_check">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setReset">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setStop">
      <LineId Id="6" Count="3" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setTorque">
      <LineId Id="10" Count="3" />
      <LineId Id="5" Count="0" />
      <LineId Id="17" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.setVelocity">
      <LineId Id="6" Count="1" />
      <LineId Id="9" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.stateUpdate">
      <LineId Id="5" Count="11" />
    </LineIds>
    <LineIds Name="FB_Axis.stop_error_check">
      <LineId Id="6" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.torque_error_check">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Axis.velocity_error_check">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>